WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
302196
RELEASE_ASSERT under ClipboardItemBindingsDataSource::ClipboardItemTypeLoader::didResolveToBlob()
https://bugs.webkit.org/show_bug.cgi?id=302196
Summary
RELEASE_ASSERT under ClipboardItemBindingsDataSource::ClipboardItemTypeLoader...
Chris Dumez
Reported
2025-11-07 22:16:00 PST
RELEASE_ASSERT under ClipboardItemBindingsDataSource::ClipboardItemTypeLoader::didResolveToBlob(): ``` Thread 0 Crashed:: Dispatch queue: com.apple.main-thread: 0 WebCore 0x1a7fed740 WTFCrashWithInfo(int, char const*, char const*, int) + 24 (/AppleInternal/Library/BuildRoots/4~CBNbugAVY4NwvDu7UBvAZ9iu0ihsUlcRUqB01_o/Applications/Xcode.app/Contents/Developer/Platforms/iPhoneOS.platform/Developer/SDKs/iPhoneOS26.2.Internal.sdk/usr/local/include/wtf/Assertions.h:969) [inlined] 1 WebCore 0x1a7fed740 WTF::CanMakeCheckedPtrBase<std::__1::atomic<unsigned int>, unsigned int>::decrementCheckedPtrCount() const + 24 (/AppleInternal/Library/BuildRoots/4~CBNbugAVY4NwvDu7UBvAZ9iu0ihsUlcRUqB01_o/Applications/Xcode.app/Contents/Developer/Platforms/iPhoneOS.platform/Developer/SDKs/iPhoneOS26.2.Internal.sdk/usr/local/include/wtf/CheckedRef.h:294) [inlined] 2 WebCore 0x1a7fed740 WTF::CheckedRef<WebCore::FileReaderLoader, WTF::RawPtrTraits<WebCore::FileReaderLoader>>::~CheckedRef() + 24 (/AppleInternal/Library/BuildRoots/4~CBNbugAVY4NwvDu7UBvAZ9iu0ihsUlcRUqB01_o/Applications/Xcode.app/Contents/Developer/Platforms/iPhoneOS.platform/Developer/SDKs/iPhoneOS26.2.Internal.sdk/usr/local/include/wtf/CheckedRef.h:56) [inlined] 3 WebCore 0x1a7fed740 WTF::CheckedRef<WebCore::FileReaderLoader, WTF::RawPtrTraits<WebCore::FileReaderLoader>>::~CheckedRef() + 24 (/AppleInternal/Library/BuildRoots/4~CBNbugAVY4NwvDu7UBvAZ9iu0ihsUlcRUqB01_o/Applications/Xcode.app/Contents/Developer/Platforms/iPhoneOS.platform/Developer/SDKs/iPhoneOS26.2.Internal.sdk/usr/local/include/wtf/CheckedRef.h:53) [inlined] 4 WebCore 0x1a7fed740 WebCore::ClipboardItemBindingsDataSource::ClipboardItemTypeLoader::didResolveToBlob(WebCore::ScriptExecutionContext&, WTF::Ref<WebCore::Blob, WTF::RawPtrTraits<WebCore::Blob>, WTF::DefaultRefDerefTraits<WebCore::Blob>>&&) + 120 (/Library/Caches/com.apple.xbs/Sources/WebCore/Source/WebCore/Modules/async-clipboard/ClipboardItemBindingsDataSource.cpp:351) [inlined] 5 WebCore 0x1a7fed740 _ZZZN7WebCore31ClipboardItemBindingsDataSource21collectDataForWritingERNS_9ClipboardEON3WTF17CompletionHandlerIFvNSt3__18optionalINS_20PasteboardCustomDataEEEEEEENK3$_0clIKNS3_12KeyValuePairINS3_6StringENS3_3RefINS_10DOMPromiseENS3_12RawPtrTraitsISH_EENS3_21DefaultRefDerefTraitsISH_EEEEEEEEDaRT_ENUlvE0_clEv + 1032 (/Library/Caches/com.apple.xbs/Sources/WebCore/Source/WebCore/Modules/async-clipboard/ClipboardItemBindingsDataSource.cpp:192) [inlined] 6 WebCore 0x1a7fed740 _ZN3WTF6Detail15CallableWrapperIZZN7WebCore31ClipboardItemBindingsDataSource21collectDataForWritingERNS2_9ClipboardEONS_17CompletionHandlerIFvNSt3__18optionalINS2_20PasteboardCustomDataEEEEEEENK3$_0clIKNS_12KeyValuePairINS_6StringENS_3RefINS2_10DOMPromiseENS_12RawPtrTraitsISJ_EENS_21DefaultRefDerefTraitsISJ_EEEEEEEEDaRT_EUlvE0_vJEE4callEv + 1688 (/AppleInternal/Library/BuildRoots/4~CBNbugAVY4NwvDu7UBvAZ9iu0ihsUlcRUqB01_o/Applications/Xcode.app/Contents/Developer/Platforms/iPhoneOS.platform/Developer/SDKs/iPhoneOS26.2.Internal.sdk/usr/local/include/wtf/Function.h:53) 7 WebCore 0x1a856c75c WTF::Function<void ()>::operator()() const + 36 (/AppleInternal/Library/BuildRoots/4~CBNbugAVY4NwvDu7UBvAZ9iu0ihsUlcRUqB01_o/Applications/Xcode.app/Contents/Developer/Platforms/iPhoneOS.platform/Developer/SDKs/iPhoneOS26.2.Internal.sdk/usr/local/include/wtf/Function.h:82) [inlined] 8 WebCore 0x1a856c75c WebCore::DOMPromise::whenPromiseIsSettled(WebCore::JSDOMGlobalObject*, JSC::JSPromise*, WTF::Function<void ()>&&)::$_0::operator()(JSC::JSGlobalObject*, JSC::CallFrame*) + 36 (/Library/Caches/com.apple.xbs/Sources/WebCore/Source/WebCore/bindings/js/JSDOMPromise.cpp:52) [inlined] ```
Attachments
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2025-11-07 22:16:09 PST
<
rdar://164271413
>
Chris Dumez
Comment 2
2025-11-07 22:20:24 PST
Pull request:
https://github.com/WebKit/WebKit/pull/53624
EWS
Comment 3
2025-11-09 14:35:03 PST
Committed
302772@main
(5d7cc5b2e05d): <
https://commits.webkit.org/302772@main
> Reviewed commits have been landed. Closing PR #53624 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug