Source/WebCore/fileapi/Blob.cpp
@@ -356,7 +356,7 @@ ExceptionOr<Ref<ReadableStream>> Blob::stream()
 
     private:
         BlobStreamSource(ScriptExecutionContext& scriptExecutionContext, Blob& blob)
-            : m_loader(makeUniqueRef<FileReaderLoader>(FileReaderLoader::ReadType::ReadAsBinaryChunks, this))
+            : m_loader(FileReaderLoader::create(FileReaderLoader::ReadType::ReadAsBinaryChunks, this))
         {
             relaxAdoptionRequirement();
             m_loader->start(&scriptExecutionContext, blob);
@@ -451,7 +451,7 @@ ExceptionOr<Ref<ReadableStream>> Blob::stream()
             return didSucceed;
         }
 
-        const UniqueRef<FileReaderLoader> m_loader;
+        const Ref<FileReaderLoader> m_loader;
         Deque<Ref<FragmentedSharedBuffer>> m_queue;
         std::optional<Exception> m_exception;
         enum class StreamState : uint8_t { NotStarted, Started, Waiting };
